# MachineLearning

./: CMakeLists.txt  LICENSE  README.md
data/: adult_all.csv  adult_test_num.csv  adult_train_num.csv  banknote.csv  dexter_train.sparse  inflammation1.csv  inflammation2.csv  simple_train_1.csv  simple_train_2.csv  simple_train_3.csv
src/: boosting.cpp  boosting.h  classifier.cpp  classifier.h  data.cpp  data.h  dtree.cpp  dtree.h  knn.cpp  knn.h  main.cpp  neural.cpp  neural.h  neuron.cpp  neuron.h  stdh.h  traindata.cpp  traindata.h  util.cpp  util.h
